# auth-script-openvpn

./: .gitignore  LICENSE  Makefile  README.md  auth_script.c  meson.build  openvpn-plugin-auth-script.c
.github/workflows/: test.yml
examples/: external_script
rpm/: openvpn-plugin-auth-script.spec
test/: build.Dockerfile
